gsap og tekst størrelse

--- a/src/components/ArtistCard.astro
+++ b/src/components/ArtistCard.astro
@@ -21,6 +21,9 @@ const {image, name, insta, face} = Astro.props;
     <style>
 
        
+.artister {
+  width: fit-content;
+}
 
 .billede {
         width: 20rem;
@@ -113,7 +116,7 @@ const {image, name, insta, face} = Astro.props;
         @media (max-width: 430px) {
             .billede {
                 width: 10rem;
-        height: 10rem;
+                height: 10rem;
     }
 
     h3{
