--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -27,6 +27,8 @@ const { variant, link, size } = Astro.props;
     justify-content: center;
     align-items: center; 
     font-size: var(--Button-medium);
+
+    width: 185px;
   }
 
   #sm {
