--- a/src/pages/booking.astro
+++ b/src/pages/booking.astro
@@ -21,9 +21,12 @@ import Button from "../components/Button.astro";
       <br>
       Lad os gøre jeres næste arrangement til en uforglemmelig oplevelse!</p>
       </div>
-      <div class="button">
+      <div class="button large">
       <Button size="lg" link="/kontakt" variant="secondary">Læs mere</Button>
       </div>
+      <div class="button small">
+        <Button size="sm" link="/kontakt" variant="secondary">Læs mere</Button>
+        </div>
   </div>
   <img src="/img/uffe_holm.webp" alt="">
   </article>
@@ -262,6 +265,10 @@ import Button from "../components/Button.astro";
     border-bottom: 2px solid var(--color-background-stroke);
   }
 
+  .small {
+    display: none;
+  }
+
   .indhold {
     height: 705px;
     display: flex;
@@ -315,6 +322,14 @@ import Button from "../components/Button.astro";
 
   .tekst > * {
     width: 20rem;
+  }
+
+  .large {
+    display: none;
+  }
+  
+  .small {
+    display: flex;
   }
   }
 </style>
