--- a/src/pages/tidligere.astro
+++ b/src/pages/tidligere.astro
@@ -45,8 +45,6 @@ import Sti from "../components/Sti.astro";
             <span class="marquee">Året 2023 <span class="circle"></span> Året 2023 <span class="circle"></span> Året 2023 <span class="circle"></span> Året 2023 <span class="circle"></span>&nbsp;</span>
             <span class="marquee">Året 2023 <span class="circle"></span> Året 2023 <span class="circle"></span> Året 2023 <span class="circle"></span> Året 2023 <span class="circle"></span>&nbsp;</span>
           </div>
-        </section>
-          <section class="tidligere">
         <article>
             <div class="artister">
                 {data.map((person) => 
@@ -114,7 +112,7 @@ mm.add("(min-width: 431px)", () => {
     scrollTrigger: {
       scrub: true,
       trigger: ".logo",
-      start: "-100 start",
+      start: "-300 start",
       end: "1000 center",
       //markers: true,
     },
@@ -141,9 +139,6 @@ article {
         padding-inline: var(--gap11);
     }
 
-    .animeret{
-        padding-block: 0px;
-    }
 
     section {
         padding-block: 74px;
@@ -212,7 +207,7 @@ article {
 		column-gap: var(--gap6);
         row-gap: var(--gap7);
 		justify-content: flex-start;
-  
+        padding-block: var(--gap7);
 	}
 
     #animated-text-strip{
@@ -241,32 +236,6 @@ article {
         }
     }
 
-    #animated-text-strip-reverse{
-        display: flex;
-        flex-flow: row nowrap;
-        align-items: center;
-        overflow: hidden;
-
-        padding-block: var(--gap7);
-		border-top: 2px solid var(--color-background-stroke);
-		border-bottom: 2px solid var(--color-background-stroke);
-    }
-
-    #animated-text-strip-reverse .marquee {
-        white-space: nowrap;
-        animation: other 10s linear infinite;
-        max-width: none;
-    }
-
-    @keyframes other {
-        0% {
-            transform: translate(-100%, 0);
-        }
-        100% {
-            transform: translate(0, 0);
-        }
-    }
-
     .marquee {
         font-family: "Inter", sans-serif;
         font-size: var(--Headline2-large);
@@ -285,18 +254,6 @@ article {
         margin-bottom: 5px;
     }
 
-    @media (min-width: 1513px){
-        .artister {
-            column-gap: var(--gap11);
-        }
-}
-
-    @media (max-width: 1450px){
-        .artister {
-            column-gap: var(--gap11);
-        }
-}
-
     @media (max-width: 1024px) {
         article {
             padding-inline: var(--gap6);
@@ -305,6 +262,15 @@ article {
             display: grid;
             grid-template-columns: 1fr 1fr;
         }
+
+        .marquee {
+        font-size: var(--Headline2-medium);
+    }
+
+    .circle {
+        width: var(--gap3);
+        height: var(--gap3);
+    }
 }
 
     @media (max-width: 430px) {
@@ -319,6 +285,18 @@ article {
         }
         .text h3 {
         font-size: 13.33px;
+    }
+    .marquee {
+        font-size: var(--Headline2-small);
+    }
+
+    .circle {
+        width: var(--gap2);
+        height: var(--gap2);
+    }
+
+    .animeret {
+        padding-top: 0px;
     }
 }
 </style>
