--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,14 @@
 ---
-const { visited } = Astro.props
 import Logo from "./Logo.astro"
 ---
 <header class="banner" id="myHeader">
-    <div class="logo">
-      <Logo/>
+    <div class="logo" id="logo">
+      <a href="/" class="logoet"><img src="/stort_logo.svg" alt="Kanonproduktion logo"></a>
     </div>
     <nav class="menu">
+      <div class="stickLogo" id="stickLogo">
+        <a href="/" class="logoet"><img src="/stort_logo.svg" alt="Kanonproduktion logo"></a>
+      </div>
       <button class="toggle-btn" aria-label="Burgermenu">
         <span class="bar1"></span>
         <span class="bar2"></span>
@@ -39,23 +41,46 @@ import Logo from "./Logo.astro"
       flex-direction: column;
       justify-content: flex-end;
       align-items: flex-end;
+
+      transition: all 0.3s ease-in-out;
     }
 
     .logo {
-      height: 100%;
       width: 100%;
-    }
-/* 
-    .sticky {
-      position: sticky;
-      top: 0;
-      width: 100%;
+      height: auto;
     }
 
-    .sticky .logo {
+    .logo {
+      transition: all 0.3s ease-in-out;
+    }
+    .stickLogo {
       display: none;
-    }  */
+    }
 
+    .banner.sticky {
+      position: fixed;
+      gap: 0px;
+      padding-top: 0px;
+    }
+
+    .banner.sticky .logo {
+      display: none; 
+      /* Hide the original logo */
+    }
+
+    .banner.sticky .stickLogo {
+      display: block; /* Show the sticky logo */
+    }
+
+    .stickLogo {
+      align-items: center;
+      padding-inline: var(--gap11);
+    }
+
+    .stickLogo img {
+      height: 40px; /* Adjust size as needed */
+      transition: all 0.3s ease-in-out;
+    }
     a {
       text-decoration: none;
       color: var(--color-text-nav);
@@ -81,12 +106,16 @@ import Logo from "./Logo.astro"
       width: 100%;
       height: 5.9375rem;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-end;
+      align-items: center;
 
       border-top: 2px solid var(--color-background-stroke);
       border-bottom: 2px solid var(--color-background-stroke);
+    }
+
+    nav ul {
+      display: flex;
+      flex-grow: 1;
+      justify-content: flex-end;
     }
     .toggle-btn {
       background-color: transparent;
@@ -222,4 +251,20 @@ import Logo from "./Logo.astro"
         header.classList.remove("sticky")
       }
     }
+
+// Add this script at the end of your HTML or in a separate JS file
+window.onscroll = function() {makeSticky()};
+
+function makeSticky() {
+  var header = document.getElementById("myHeader");
+  var sticky = header.offsetTop;
+
+  if (window.pageYOffset > sticky) {
+    header.classList.add("sticky");
+  } else {
+    header.classList.remove("sticky");
+  }
+}
+
+
   </script>
