test på billedstørrelse

--- a/src/pages/artist/[slug].astro
+++ b/src/pages/artist/[slug].astro
@@ -169,6 +169,12 @@ import MainLayout from "../../layouts/MainLayout.astro";
 
 
 <style>
+
+  img{
+    width: 70%;
+    height: auto;
+    margin-inline: auto;
+  }
   section {
 		padding-block: 74px;
     padding-inline: var(--gap11);
