footer rettet til

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,6 +26,12 @@ import SocialIcon from "./SocialIcon.astro";
     </div>
 
     <div class="col_4">
+      <h4>Skal vi planlægge dit event?</h4>
+      <br/>
+      <Button size="sm" link="/kontakt" variant="primary">Kontakt</Button>
+    </div>
+
+    <!-- <div class="col_4">
         <h4>Modtag de seneste nyheder</h4>
         <form>
             <input type="email" placeholder=" info@kanonproduktion.dk" required />
@@ -34,7 +40,7 @@ import SocialIcon from "./SocialIcon.astro";
             <Button size="sm" link="/" variant="primary">Tilmeld</Button>
      
           </form>
-    </div>
+    </div> -->
 </div>
     <div class="social">
 <SocialIcon>
