--- a/src/pages/artist/[slug].astro
+++ b/src/pages/artist/[slug].astro
@@ -280,6 +280,12 @@ import MainLayout from "../../layouts/MainLayout.astro";
   }
 
   @media (max-width: 430px) {
+
+    img{
+    width: 100%;
+    height: auto;
+    margin-inline: auto;
+  }
     section{
 		padding-inline: var(--gap4);
 	}
