--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -1,4 +1,4 @@
-<video loop src="/img/kanonproduktion_video.mp4" width="100%" height="auto" autoplay></video>
+<video autoplay muted loop src="/img/kanonproduktion_video.mp4" width="100%" height="auto" autoplay></video>
 
 <!-- ¨<video id="Vid" src="/img/kanonproduktion_video.mp4" width="100%" height="auto" autoplay></video>
 
